# python-fastapi-full

./: .gitignore  README.md  docker-compose -prod.yml  docker-compose-dev.yml  gunicorn.service  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 005fa234aa45_phone_number_to_users_table.py  24cdd8609a53_auto_vote.py  3741c140bb61_add_foreignkey_to_posts_table.py  79f1eaeeb15d_add_content_column_posts_table.py  915f99c3c942_create_posts_table.py  cdaebafb53c6_add_last_olumns_to_posts.py  fb93c0543677_add_users_table.py
app/: config.py  database.py  main.py  main_raw_sql.py  models.py  oath2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
